--- a/Phoenix.csproj
+++ b/Phoenix.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <Compile Remove="Migrations\20221118192620_PeopleTable.cs" />
     <Compile Remove="Migrations\20221118192620_PeopleTable.Designer.cs" />
+    <Compile Remove="Migrations\PhoenixContextModelSnapshot.cs" />
   </ItemGroup>
 
   <ItemGroup>
